--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -71,6 +71,31 @@ body{
 
 .side-nav a{
     display: flex;
-    flex-direction: column;
     padding-bottom: 10px;
+    text-decoration: none;
+    color: #b3b3b3
+}
+
+.side-nav a:hover{
+    color: white
+}
+
+.user-playlist-div{
+    margin-left: 20px;
+}
+
+.fa-solid:hover{
+    color: white;
+}
+
+.bottom-div-container{
+    z-index: 100;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 70px;
+    color: white;
+    background-color: #181818;
 }
