--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -95,7 +95,22 @@ body{
     bottom: 0;
     left: 0;
     width: 100%;
+    height: 80px;
+    color: white;
+    background-color: #181818;
+}
+
+.logged-out-bottom-div-container{
+    z-index: 100;
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     height: 70px;
     color: white;
     background-color: #181818;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
