added follower store, button, working on finishing feature

--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -4,7 +4,7 @@
     height: 2000px;
 }
 
-.artist-container{
+.artist-landing-container{
     /* display: flex;
     flex-direction: row;
     justify-content: space-evenly; */
