added frameworks for audio player, can play and pause audio and queue up playlists, need to style and add more functionality

--- a/react-app/src/components/AccountDropDown/AccountDropDown.css
+++ b/react-app/src/components/AccountDropDown/AccountDropDown.css
@@ -5,7 +5,9 @@
     background-color: #282828;
 }
 .drop-down{
-    width: 150px;
+    /* width: 100px; */
+    height: 40px;
+    /* margin-left: 45px; */
 }
 
 #drop-down-button{
