--- a/react-app/src/components/LandingPage/LandingPage.css
+++ b/react-app/src/components/LandingPage/LandingPage.css
@@ -1,7 +1,7 @@
 .landing-page-container{
     color: white;
     padding-left: 30px;
-    height: 2000px;
+    padding-bottom: 80px;
 }
 
 .artist-landing-container{
