finishing up music player styling, bug fixes

--- a/react-app/src/components/PlaylistPage/PlaylistPage.css
+++ b/react-app/src/components/PlaylistPage/PlaylistPage.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: row;
     border-bottom: 1px white solid;
-    margin-top: 30px
+    margin-top: 30px;
 }
 
 #playlist-info-container{
