--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -92,7 +92,8 @@ body{
     display: flex;
     padding-bottom: 10px;
     text-decoration: none;
-    color: #b3b3b3
+    color: #b3b3b3;
+    overflow-y:visible;
 }
 
 .side-nav a:hover{
