new migration added

--- a/react-app/src/components/PlaylistPage/EditPlaylist.css
+++ b/react-app/src/components/PlaylistPage/EditPlaylist.css
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    margin-bottom: 400px;
 }
 .edit-project-componenets{
     display: flex;
