--- a/react-app/src/components/AccountDropDown/AccountDropDown.css
+++ b/react-app/src/components/AccountDropDown/AccountDropDown.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     background-color: #282828;
+    margin-top: 10px;
 }
 .drop-down{
     /* width: 100px; */
@@ -11,5 +12,7 @@
 }
 
 #drop-down-button{
-    background-color: #282828;
+    border-radius: 20px;
+    border: none;
+    background-color: #1ed760;
 }
