--- a/react-app/src/components/PlaylistPage/PlaylistPage.css
+++ b/react-app/src/components/PlaylistPage/PlaylistPage.css
@@ -1,6 +1,7 @@
 .playlist-container{
     margin-left: 30px;
     margin-right: 30px;
+    padding-bottom: 80px;
 }
 
 .playlist-header-container{
@@ -42,4 +43,7 @@
 .delete-playlist-button:hover{
     width: 110px;
     height: 40px;
+}
+.playlist-song-container:hover{
+    background-color: gray;
 }
