--- a/react-app/src/components/AlbumPage/AlbumPage.css
+++ b/react-app/src/components/AlbumPage/AlbumPage.css
@@ -1,3 +1,17 @@
 .song-album-container:hover{
     background-color: gray;
 }
+
+#song-added-div{
+    color: white;
+    display: flex;
+    justify-content: center;
+    background-color: #2e77d0;
+    width: 200px;
+    margin-left: 40%;
+    z-index: 100;
+    height: 50px;
+    border-radius: 15px;
+    position:sticky;
+    bottom: 90px;
+}
