--- a/react-app/src/components/ArtistPage/ArtistPage.css
+++ b/react-app/src/components/ArtistPage/ArtistPage.css
@@ -42,3 +42,17 @@
 .add-song-dropdown > li {
     padding-right: 40px;
 }
+
+#song-added-div{
+    color: white;
+    display: flex;
+    justify-content: center;
+    background-color: #2e77d0;
+    width: 200px;
+    margin-left: 40%;
+    z-index: 100;
+    height: 50px;
+    border-radius: 15px;
+    position:sticky;
+    bottom: 90px;
+}
