--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -29,7 +29,7 @@ body{
     margin-left: -8px;
     position: sticky;
     height: 50px;
-    top: 0px;
+    top: 0;
     right: -7.5px;
     background-color: #111111;
 }
