--- a/react-app/src/components/PlaylistPage/PlaylistPage.css
+++ b/react-app/src/components/PlaylistPage/PlaylistPage.css
@@ -1,6 +1,6 @@
 .playlist-container{
-    margin-left: 30px;
-    margin-right: 30px;
+    /* margin-left: 30px; */
+    /* margin-right: 30px; */
     padding-bottom: 80px;
 }
 
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: row;
     border-bottom: 1px white solid;
-    margin-top: 30px;
+    width: 103.12%;
 }
 
 #playlist-info-container{
