added queue functionality to liked songs component

--- a/react-app/src/components/Search/Search.css
+++ b/react-app/src/components/Search/Search.css
@@ -8,6 +8,11 @@
     font-size: 18px;
 }
 
+.search-results-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 270px);
+}
+
 .album-cards{
     margin-left: 50px;
     display: flex;
@@ -18,10 +23,26 @@
     color: white;
     width: 250px;
     cursor: pointer;
-    padding-right: 20px;
 }
 
 .album-cards:hover{
+    background-color: rgb(40, 40, 40);
+}
+
+.playlist-cards{
+    margin-left: 50px;
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid gray; */
+    border-radius: 20px;
+    background-color: #181818;
+    color: white;
+    width: 250px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+
+.playlist-cards:hover{
     background-color: rgb(40, 40, 40);
 }
 
