--- a/react-app/src/components/AccountDropDown/AccountDropDown.css
+++ b/react-app/src/components/AccountDropDown/AccountDropDown.css
@@ -26,10 +26,13 @@
     border: none;
     background-color: #1ed760;
     margin-top: 5px;
-    width: 75px;
+    width: 80px;
     height: 30px;
     font-size: 16px;
     cursor: pointer;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 
 .logout-button-dropdown{
