project is all set except for some minor visual bugs Ill be working on, new scroll wheel added, general styling fixes

--- a/react-app/src/components/AudioPlayer/AudioPlayer.css
+++ b/react-app/src/components/AudioPlayer/AudioPlayer.css
@@ -5,7 +5,7 @@ input[type=range] {
 	margin-bottom: 10px;
     margin-top: 25px;
 	border-radius: 8px;
-	background: #3b7677;
+	background: #777777;
 	transition: background 0.2s ease;
 	cursor: pointer;
 }
