--- a/react-app/src/components/PlaylistPage/PlaylistPage.css
+++ b/react-app/src/components/PlaylistPage/PlaylistPage.css
@@ -39,10 +39,9 @@
     margin-top: 20px;
     width: 100px;
     height: 35px;
-}
-.delete-playlist-button:hover{
-    width: 110px;
-    height: 40px;
+    border: none;
+    cursor: pointer;
+    padding-top: 5px;
 }
 .playlist-song-container:hover{
     background-color: gray;
