forgot one minor style fix on search component

--- a/react-app/src/components/Search/Search.css
+++ b/react-app/src/components/Search/Search.css
@@ -26,6 +26,7 @@
 }
 
 .album-cards:hover{
+    transition: 1s;
     background-color: rgb(40, 40, 40);
 }
 
@@ -43,6 +44,7 @@
 }
 
 .playlist-cards:hover{
+    transition: 1s;
     background-color: rgb(40, 40, 40);
 }
 
