--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -34,7 +34,7 @@ body{
     right: -7.5px;
     background-color: #111111;
     margin-top: -10px;
-    width: 108%;
+    width: 106.65%
     /* z-index: 999; */
 }
 
