--- a/react-app/src/components/LikedSongs/LikedSongs.css
+++ b/react-app/src/components/LikedSongs/LikedSongs.css
@@ -1,6 +1,7 @@
 .liked-songs-header{
     background: rgb(41,30,81);
-background: linear-gradient(0deg, rgba(63,44,124,1) 0%, rgba(63,44,124,1) 9%, rgba(82,59,159,1) 100%);
+    background: linear-gradient(0deg, rgba(63,44,124,1) 0%, rgba(63,44,124,1) 9%, rgba(82,59,159,1) 100%);
+    width: 103%;
 }
 .image-container{
     box-shadow: 3px 3px 3px black;
@@ -8,5 +9,6 @@ background: linear-gradient(0deg, rgba(63,44,124,1) 0%, rgba(63,44,124,1) 9%, rg
 
 .play-button-container{
     background: rgb(30,30,30);
-background: linear-gradient(0deg, rgba(30,30,30,1) 0%, rgba(29,23,53,1) 27%, rgba(57,40,112,1) 52%);
+    background: linear-gradient(0deg, rgba(30,30,30,1) 0%, rgba(29,23,53,1) 27%, rgba(57,40,112,1) 52%);
+    width: 103%;
 }
