--- a/react-app/src/components/PlaylistPage/PlaylistPage.css
+++ b/react-app/src/components/PlaylistPage/PlaylistPage.css
@@ -25,8 +25,9 @@
 .song-list-header-container{
     display: flex;
     flex-direction: row;
-    border-bottom: 1px white solid;
+    border-bottom: 1px #2c2c2c solid;
     justify-content: space-between;
+    padding-right: 50px;
 }
 
 .number-icon{
