--- a/react-app/src/components/AccountDropDown/AccountDropDown.css
+++ b/react-app/src/components/AccountDropDown/AccountDropDown.css
@@ -12,6 +12,7 @@
     z-index: 1;
     /* margin-left: 45px; */
     font-size: 20px;
+    border-radius: 10px;
 }
 .drop-down a:hover {
     background-color: white;
@@ -26,13 +27,12 @@
     border: none;
     background-color: #1ed760;
     margin-top: 5px;
-    width: 80px;
+    width: fit-content;
     height: 30px;
     font-size: 16px;
     cursor: pointer;
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
 }
 
 .logout-button-dropdown{
