fixed bugs with volume slider and track skip, added quality of life additions such as auto playing song on click

--- a/react-app/src/components/NavBar/NavBar.css
+++ b/react-app/src/components/NavBar/NavBar.css
@@ -172,3 +172,15 @@ body{
     text-decoration: underline;
     color: white;
 }
+
+/* style={{ border: "none", background: "none", color: "#b3b3b3", cursor: "pointer" }} */
+
+.create-playlist-button{
+    border: none;
+    background: none;
+    color: #b3b3b3;
+    cursor: pointer;
+    margin-left: -5px;
+    font-size: 16px;
+    margin-top: -1px;
+}
