--- a/react-app/src/components/AccountDropDown/AccountDropDown.css
+++ b/react-app/src/components/AccountDropDown/AccountDropDown.css
@@ -7,18 +7,20 @@
     height: 50px;
     position: absolute;
     background-color: rgb(40, 40, 40);
-    width: 75px;
+    width: 120px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
-    /* margin-left: 45px; */
+    /* margin-left: 9px; */
     font-size: 20px;
     border-radius: 10px;
 }
 .drop-down a:hover {
     background-color: white;
+    border-radius: 10px;
 }
 .drop-down div:hover{
     background-color: white;
+    border-radius: 10px;
 }
 
 
@@ -27,7 +29,7 @@
     border: none;
     background-color: #1ed760;
     margin-top: 5px;
-    width: fit-content;
+    width: 120px;
     height: 30px;
     font-size: 16px;
     cursor: pointer;
