--- a/react-app/src/components/AccountPage/AccountPage.css
+++ b/react-app/src/components/AccountPage/AccountPage.css
@@ -13,7 +13,8 @@
 
 .profile-header-container{
     padding-bottom: 10px;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid #808080;
+    margin-right: -100px;
 }
 
 .fa-user{
